--- a/index.html
+++ b/index.html
@@ -19,16 +19,94 @@
         <div class="box box1">
             <img src="img/logo.svg" alt="">
             <p>EPICODE - IL BLOG DEI DEVELOPERS</p>
-            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum dolores repellat molestias magnam neque.
-                Iste, itaque nisi! Nulla natus quos at. Nisi perferendis in consectetur amet soluta dicta iusto
-                nesciunt!</p>
+            <p class="1">Home</p>
+            <p class="2">Articoli</p>
+            <p class="3">Lavora con noi</p>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque possimus sapiente temporibus deserunt
-            mollitia soluta natus itaque a officia eligendi? Facilis debitis tempore, vero aliquid alias minus quaerat
-            amet aut!</p>
     </header>
 
     <main>
+        <div class="box box2">
+            <h1>Come creare un <br> template per i post</h1>
+            <div>
+                <p>di mario rossi-pubblicato il 25- <br> 10-2020</p>
+                <p></p>
+            </div>
+            <div class="description">
+                <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da
+                    applicare a tutte le pagine</p>
+                <p>Le varie aree saranno quindi suddivise in:</p>
+                <ul>
+                    <li>Contenuti di intestazione del tag
+                        <div class="header">header</div>
+                    </li>
+                    <li>Contenuti centrali variabili del tag
+                        <div class="main">main</div>
+                    </li>
+                    <li>contenuti di fine pagina comuni, da inserire nel tag
+                        <div class="footer">footer</div>
+                    </li>
+                </ul>
+                <p>formattazione del codice</p>
+                <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare in CSS.
+                    perciò i passi saranno:</p>
+                <ol>
+                    <li>progettare su carta il markup finale, assegnando ad ogni specifico testo il tag appropriato</li>
+                    <li>scrivere l' HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
+                    <li>applicare gli stili CSS</li>
+                </ol>
+                <p>l'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressochè totale.
+                </p>
+                <table>
+                    <tbody>
+                        <tr>
+                            <th>Anno</th>
+                            <th>% di utilizzo</th>
+                            <th>supporto browser</th>
+                        </tr>
+                        <tr>
+                            <td>2000</td>
+                            <td>20%</td>
+                            <td>17%</td>
+                        </tr>
+                        <tr>
+                            <td>2002</td>
+                            <td>35%</td>
+                            <td>22%</td>
+                        </tr>
+                        <tr>
+                            <td>2004</td>
+                            <td>45%</td>
+                            <td>42%</td>
+                        </tr>
+                        <tr>
+                            <td>2008</td>
+                            <td>80%</td>
+                            <td>51%</td>
+                        </tr>
+                        <tr>
+                            <td>2012</td>
+                            <td>100%</td>
+                            <td>76%</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+                <hr>
+                <p>Un test di validazione potrà essere <br>fatto tramite il tool online dedicato <br>allo scopo. una
+                    volta ottimizzato il <br>tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri <br>
+                    developers come loro:</p>
+            </div>
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/AV5qRtBEtGQ" title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="box sign">
+                <h1>NOVITA</h1>
+                <p>Vuoi rimanere aggiornato su altre <br>novità del blog? iscriviti alla <br> nostra newsletter:</p>
+            </div>
+        </div>
     </main>
     <footer>
 
