--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <style>
         body {
             background-image: url(img/sfondo.png);
-        }
     </style>
 </head>
 
@@ -26,11 +25,10 @@
     </header>
 
     <main>
-        <div class="box box2">
+        <nav>
             <h1>Come creare un <br> template per i post</h1>
             <div>
                 <p>di mario rossi-pubblicato il 25- <br> 10-2020</p>
-                <p></p>
             </div>
             <div class="description">
                 <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le parti comuni da
@@ -106,7 +104,10 @@
                 <h1>NOVITA</h1>
                 <p>Vuoi rimanere aggiornato su altre <br>novità del blog? iscriviti alla <br> nostra newsletter:</p>
             </div>
-        </div>
+            <input type="email">
+            <h1>ARTICOLI CORRELATI</h1>
+        </nav>
+
     </main>
     <footer>
 
