--- a/indexfinal.html
+++ b/indexfinal.html
@@ -33,12 +33,12 @@
             <p>di mario rossi-pubblicato il 25- <br> 10-2020</p>
         </nav>
 
-        <div class="description">
+        <aside>
             <p>La prima cosa da fare è suddividere in blocchi logici la pagina, identificando le <strong>parti
                     comuni</strong> da
                 applicare a tutte le pagine</p>
             <p>Le varie aree saranno quindi suddivise in:</p>
-        </div>
+        </aside>
 
         <section>
             <ul>
@@ -54,103 +54,108 @@
             </ul>
         </section>
 
-        <div class="description">
+        <aside>
             <p>formattazione del codice</p>
-            <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da selezionare in CSS.
+            <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <strong>selezionare in
+                    CSS.</strong>
                 perciò i passi saranno:</p>
-        </div>
+            <aside>
 
-        <section>
-            <ol>
-                <li>progettare su carta il markup finale, assegnando ad ogni specifico testo il tag appropriato</li>
-                <li>scrivere l' HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
-                <li>applicare gli stili CSS</li>
-            </ol>
-        </section>
+                <section>
+                    <ol>
+                        <li>progettare su carta il markup finale, assegnando ad ogni specifico testo il tag appropriato
+                        </li>
+                        <li>scrivere l' HTML dai tag esterni a quelli interni e dall'alto verso il basso</li>
+                        <li>applicare gli stili CSS</li>
+                    </ol>
+                </section>
 
-        <div class="description">
-            <p>l'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressochè totale.
-            </p>
-        </div>
+                <aside>
+                    <p>l'applicazione di stili CSS è cresciuta negli anni fino a raggiungere la diffusione pressochè
+                        totale.
+                    </p>
+                </aside>
 
-        <h3>Diffusione dei CSS</h3>
+                <h3>Diffusione dei CSS</h3>
 
-        <table>
-            <tbody>
-                <tr>
-                    <th>Anno</th>
-                    <th>% di utilizzo</th>
-                    <th>supporto browser</th>
-                </tr>
-                <tr>
-                    <td>2000</td>
-                    <td>20%</td>
-                    <td>17%</td>
-                </tr>
-                <tr>
-                    <td>2002</td>
-                    <td>35%</td>
-                    <td>22%</td>
-                </tr>
-                <tr>
-                    <td>2004</td>
-                    <td>45%</td>
-                    <td>42%</td>
-                </tr>
-                <tr>
-                    <td>2008</td>
-                    <td>80%</td>
-                    <td>51%</td>
-                </tr>
-                <tr>
-                    <td>2012</td>
-                    <td>100%</td>
-                    <td>76%</td>
-                </tr>
+                <table>
+                    <tbody>
+                        <tr>
+                            <th>Anno</th>
+                            <th>% di utilizzo</th>
+                            <th>supporto browser</th>
+                        </tr>
+                        <tr>
+                            <td>2000</td>
+                            <td>20%</td>
+                            <td>17%</td>
+                        </tr>
+                        <tr>
+                            <td>2002</td>
+                            <td>35%</td>
+                            <td>22%</td>
+                        </tr>
+                        <tr>
+                            <td>2004</td>
+                            <td>45%</td>
+                            <td>42%</td>
+                        </tr>
+                        <tr>
+                            <td>2008</td>
+                            <td>80%</td>
+                            <td>51%</td>
+                        </tr>
+                        <tr>
+                            <td>2012</td>
+                            <td>100%</td>
+                            <td>76%</td>
+                        </tr>
 
-            </tbody>
-        </table>
+                    </tbody>
+                </table>
 
-        <hr>
+                <hr>
 
-        <div class="description">
-            <p>Un test di validazione potrà essere <br>fatto tramite il tool online dedicato <br>allo scopo. una
-                volta ottimizzato il <br>tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri <br>
-                developers come loro:</p>
-        </div>
+                <aside>
+                    <p>Un test di validazione potrà essere <br>fatto tramite il tool online dedicato <br>allo scopo. una
+                        volta ottimizzato il <br>tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri
+                        <br>
+                        developers come loro:
+                    </p>
+                </aside>
 
-        <div class="video">
-            <iframe src="https://www.youtube.com/embed/AV5qRtBEtGQ" title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/AV5qRtBEtGQ" title="YouTube video player"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
 
-        <div class="box sign">
-            <h2>NOVITA</h2>
-            <p>Vuoi rimanere aggiornato su altre <br>novità del blog? iscriviti alla <br> nostra newsletter:</p>
-            <input type="email">
-        </div>
+                <div class="box sign">
+                    <h2>NOVITA</h2>
+                    <p>Vuoi rimanere aggiornato su altre <br>novità del blog? iscriviti alla <br> nostra newsletter:</p>
+                    <input type="email">
+                </div>
 
-        <h2>ARTICOLI CORRELATI</h2>
+                <h2>ARTICOLI CORRELATI</h2>
 
-        <div class="box code">
-            <h4>Validare il codice HTML</h4>
-            <p>Categoria: develop</p>
-            <p id="date1">Data: 18-09-2020</p>
-        </div>
+                <div class="box code">
+                    <h4>Validare il codice HTML</h4>
+                    <p>Categoria: develop</p>
+                    <p id="date1">Data: 18-09-2020</p>
+                </div>
 
-        <div class="box sintax">
-            <h4>Correggiere la sintassi</h4>
-            <p>Categoria: develop</p>
-            <p id="date1">Data: 16-09-2020</p>
+                <div class="box sintax">
+                    <h4>Correggiere la sintassi</h4>
+                    <p>Categoria: develop</p>
+                    <p id="date1">Data: 16-09-2020</p>
 
-        </div>
+                </div>
 
-        <div class="box kb">
-            <h4>Meno Kb nella pagina</h4>
-            <p>Categoria: develop</p>
-            <p id="date1">Data: 16-09-2020</p>
-        </div>
+                <div class="box kb">
+                    <h4>Meno Kb nella pagina</h4>
+                    <p>Categoria: develop</p>
+                    <p id="date1">Data: 16-09-2020</p>
+                </div>
 
     </main>
 
