--- a/indexfinal.html
+++ b/indexfinal.html
@@ -22,9 +22,16 @@
             <p id="title">EPICODE - IL BLOG DEI DEVELOPERS</p>
 
             <section>
-                <p id="menu">Home</p>
-                <p id="menu">Articoli</p>
-                <p id="menu">Lavora con noi</p>
+                <a href="#">
+                    <p id="menu">Home</p>
+                </a>
+                <a href="">
+                    <p id="menu">Articoli</p>
+                </a>
+
+                <a href="#">
+                    <p id="menu">Lavora con noi</p>
+                </a>
             </section>
 
         </div>
@@ -126,7 +133,8 @@
                 <hr>
 
                 <aside>
-                    <p>Un test di validazione potrà essere <br>fatto tramite il tool online dedicato <br>allo scopo. una
+                    <p>Un test di validazione potrà essere <br>fatto tramite il <a href="#">tool online</a> dedicato
+                        <br>allo scopo. una
                         volta ottimizzato il <br>tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri
                         <br>
                         developers come loro:
@@ -148,20 +156,26 @@
                 <h2>ARTICOLI CORRELATI</h2>
 
                 <div class="box code">
-                    <h4>Validare il codice HTML</h4>
+                    <a href="#">
+                        <h4>Validare il codice HTML</h4>
+                    </a>
                     <p>Categoria: develop</p>
                     <p id="date1">Data: 18-09-2020</p>
                 </div>
 
                 <div class="box sintax">
-                    <h4>Correggiere la sintassi</h4>
+                    <a href="#">
+                        <h4>Correggiere la sintassi</h4>
+                    </a>
                     <p>Categoria: develop</p>
                     <p id="date1">Data: 16-09-2020</p>
 
                 </div>
 
                 <div class="box kb">
-                    <h4>Meno Kb nella pagina</h4>
+                    <a href="#">
+                        <h4>Meno Kb nella pagina</h4>
+                    </a>
                     <p>Categoria: develop</p>
                     <p id="date1">Data: 16-09-2020</p>
                 </div>
@@ -172,7 +186,7 @@
         <div class="box footer">
             <p class="title">Blog Epicode ©2021</p>
             <p>Testata online di Mario Rossi,registrata con <br>prot. n.213/2018 - via luigi einaudi 2 - milano.
-                <br>P.IVA 00112233. info@epicode.school
+                <br>P.IVA 00112233. <a href="">info@epicode.school</a>
             </p>
         </div>
     </footer>
