--- a/indexfinal.html
+++ b/indexfinal.html
@@ -23,14 +23,14 @@
 
             <section>
                 <a href="#">
-                    <p id="menu">Home</p>
+                    <p>Home</p>
                 </a>
                 <a href="">
-                    <p id="menu">Articoli</p>
+                    <p>Articoli</p>
                 </a>
 
                 <a href="#">
-                    <p id="menu">Lavora con noi</p>
+                    <p>Lavora con noi</p>
                 </a>
             </section>
 
